# crank-system

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  TODO_antichaos  TODO_types_graph_to_digraph  autogen.sh  configure.ac  crank-base-0.0.pc.in  crank-core-0.0.pc.in  crank-shape-0.0.pc.in  crank-uncrustify-c.cfg  crank-visual-0.0.pc.in
bench/c/: Makefile.am  test_perf_digraph.c  test_perf_matfloat.c  test_perf_str.c
bench/newc/: Makefile.am  test_perf_matfloat  test_perf_matfloat.c
crankbase/: CrankBase-0.0.metadata  Makefile.am  crank128.c  crank128.h  crankadvgraph.c  crankadvgraph.h  crankadvmat.c  crankadvmat.h  crankbase-custom.vala  crankbase.h  crankbasebook.c  crankbasebook.h  crankbasemacro.h  crankbasemisc.c  crankbasemisc.h  crankbasetest.c  crankbasetest.h  crankbench-private.h  crankbench.c  crankbench.h  crankbenchresult.c  crankbenchresult.h  crankbenchrun.c  crankbenchrun.h  crankbits.c  crankbits.h  crankcellspace2.c  crankcellspace2.h  crankcellspace3.c  crankcellspace3.h  crankcomplex.c  crankcomplex.h  crankcompositable.c  crankcompositable.h  crankcompositable1n.c  crankcompositable1n.h  crankcomposite.c  crankcomposite.h  crankdigraph.c  crankdigraph.h  (+40 more)
crankcore/: CrankCore-0.0-custom.vala  CrankCore-0.0.metadata  Makefile.am  crankcore.h  crankentity-private.h  crankentity.c  crankentity.h  crankentity3.c  crankentity3.h  crankplace-private.h  crankplace.c  crankplace.h  crankplace3.c  crankplace3.h  crankplaceentity.c  crankplaceentity.h  cranksession.c  cranksession.h  cranksession3.c  cranksession3.h  cranksession3entitymodule.c  cranksession3entitymodule.h  cranksession3module.c  cranksession3module.h  cranksession3placemodule.c  cranksession3placemodule.h  cranksessionelement.c  cranksessionelement.h  cranksessionmodule.c  cranksessionmodule.h  cranksessionmoduleplaced-private.h  cranksessionmoduleplaced.c  cranksessionmoduleplaced.h  cranksessionmodulesimtimed.c  cranksessionmodulesimtimed.h  cranksessionmoduletick.c  cranksessionmoduletick.h
crankdummy/: Makefile.am  crankdummy.c  crankdummy.h  crankdummyexec.c
crankshape/: CrankShape-0.0-custom.vala  CrankShape-0.0.metadata  Makefile.am  crankbox.c  crankbox.h  crankcpolygon.c  crankcpolygon.h  crankeuler.c  crankeuler.h  crankgjk.c  crankgjk.h  crankoctreeset.c  crankoctreeset.h  crankplane.c  crankplane.h  crankpolystruct3.c  crankpolystruct3.h  crankrotation.c  crankrotation.h  crankshape.h  crankshape2.c  crankshape2.h  crankshape2circle.c  crankshape2circle.h  crankshape2cpolygon.c  crankshape2cpolygon.h  crankshape2finite.c  crankshape2finite.h  crankshape2ifinite.c  crankshape2ifinite.h  crankshape2ipolygon.c  crankshape2ipolygon.h  crankshape2iround.c  crankshape2iround.h  crankshape2point.c  crankshape2point.h  crankshape2polygon.c  crankshape2polygon.h  crankshape2rect.c  crankshape2rect.h  (+42 more)
crankvisual/: Makefile.am  crankcamera-private.h  crankcamera.c  crankcamera.h  crankcameracontent.c  crankcameracontent.h  crankfilm.c  crankfilm.h  cranklightable.c  cranklightable.h  cranklightablearanged.c  cranklightablearanged.h  crankmaterial.c  crankmaterial.h  crankmeshutil.c  crankmeshutil.h  crankprojection.c  crankprojection.h  crankrenderable.c  crankrenderable.h  crankrenderableprimitive.c  crankrenderableprimitive.h  crankrenderlayer.c  crankrenderlayer.h  crankrenderlayerarray.c  crankrenderlayerarray.h  crankrenderlayercluster.c  crankrenderlayercluster.h  crankrenderlayertexture.c  crankrenderlayertexture.h  crankrenderlayervisible.c  crankrenderlayervisible.h  crankrendermodule.c  crankrendermodule.h  crankrenderpdata.c  crankrenderpdata.h  crankrenderplacedata.c  crankrenderplacedata.h  crankrenderprocess.c  crankrenderprocess.h  (+13 more)
demo/matrix/: Makefile.am  crankdemomatpad.c  crankdemomatpad.h  crankdemomatpad.ui  crankdemomatrix.c  crankdemomatrix.gresources.xml  crankdemomatrix.ui
demo/triangles/: Makefile.am  crankdemorenderabletriangle.c  crankdemorenderabletriangle.h  crankdemotriangles.c
tests/: Makefile.am  glib-tap.mk  test_base_macro.c  test_digraph.c  test_dummy.c  test_func_holder.c  test_singular.c  test_types_graph.c  test_value.c  test_vec_bool.c  test_vec_float.c  test_vec_int.c
tests/c/: Makefile.am  test_128.c  test_advgraph.c  test_advmat.c  test_base_book.c  test_base_macro.c  test_base_test.c  test_complex.c  test_digraph.c  test_func_holder.c  test_iter.c  test_mat_cplx_float.c  test_mat_float.c  test_permutation.c  test_quaternion.c  test_range.c  test_string.c  test_types_graph.c  test_value.c  test_vec_bool.c  test_vec_cplx_float.c  test_vec_float.c  test_vec_int.c
tests/c/base/: Makefile.am  test_128.c  test_advgraph.c  test_advmat.c  test_base_macro.c  test_base_test.c  test_cell_space.c  test_complex.c  test_mat_cplx_float.c  test_mat_float.c  test_permutation.c  test_vec_cplx_float.c
tests/c/bench/: Makefile.am  test_perf_digraph.c
tests/c/perf/: Makefile.am  test_perf_digraph.c
tests/c/shape/: Makefile.am  test_euler.c  test_gjk.c  (+4 more)
tests/perf/: test_perf_digraph.c
tests/python/: Makefile.am  test_advgraph.py  test_advmat.py  test_base_book.py  test_complex.py  test_digraph.py  test_func_holder.py  test_mat_cplx_float.py  test_mat_float.py  test_permutation.py  test_quaternion.py  test_range.py  test_types_graph.py  test_vec_bool.py  test_vec_cplx_float.py  test_vec_float.py  test_vec_int.py
tests/vala/: Makefile.am  test_advgraph.vala  test_advmat.vala  test_base_book.vala  test_base_test.vala  test_complex.vala  test_digraph.vala  test_iter.vala  test_mat_cplx_float.vala  test_mat_float.vala  test_permutation.vala  test_quaternion.vala  test_range.vala  test_string.vala  test_vala.vala  test_vec_bool.vala  test_vec_cplx_float.vala  test_vec_float.vala  test_vec_int.vala
tests_python/: Makefile.am  test_digraph.py  test_func_holder.py  test_singular.py  test_vec_bool.py  test_vec_float.py
tests_vala/: Makefile.am  test_digraph.vala  test_func_holder.vala  test_function.vala  test_singular.vala  test_string.c  test_types_graph.vala  test_vala.vala  test_vec_float.vala  test_vec_int.vala
(+54 files in other folders)
